<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@color/colorPrimaryLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Layout to Hold Title Contents-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/Title_of_movie"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/movie_Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="4dp"
                    android:textSize="@dimen/text_size_title"
                    android:textStyle="bold"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/movie_Poster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:scaleType="centerCrop" />


                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="40dp"
                        android:layout_marginStart="40dp"
                        android:fontFamily="sans-serif"
                        android:text="Trailers"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/button_trailer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="PlayTrailer"
                        android:text="PLAY"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/textView"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="sans-serif"
                        android:text="User Reviews"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/textView"
                        app:layout_constraintTop_toBottomOf="@+id/button_trailer" />

                    <Button
                        android:id="@+id/button_review"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="ViewReviews"
                        android:text="See All"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/textView"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:onClick="PlayTrailer"
                        app:layout_constraintBottom_toTopOf="@+id/button_trailer"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/button_trailer"
                        app:srcCompat="@drawable/ic_play_icon" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        app:layout_constraintBottom_toTopOf="@+id/button_review"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/button_review"
                        app:srcCompat="@drawable/ic_review_icon" />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Favourite"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/textView3"
                        app:layout_constraintTop_toBottomOf="@+id/textView3"


                        />

                    <ImageView
                        android:id="@+id/heart_favourite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintBottom_toTopOf="@+id/button2"
                        app:layout_constraintEnd_toStartOf="@+id/button2"
                        app:layout_constraintTop_toBottomOf="@+id/button2"
                        app:srcCompat="@drawable/ic_heart" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="104dp"
                        android:layout_marginStart="104dp"
                        android:fontFamily="sans-serif"
                        android:text="Mark As"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/textView"
                        app:layout_constraintStart_toEndOf="@+id/textView"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <Button
                        android:id="@+id/button"
                        android:layout_width="wrap_content"
                        android:layout_height="52dp"
                        android:text="FAVOURITE"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/textView6"
                        app:layout_constraintTop_toBottomOf="@+id/textView6"/>


                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:layout_marginStart="60dp"
                        android:fontFamily="sans-serif"
                        android:text="Remove From"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/textView2"
                        app:layout_constraintStart_toEndOf="@+id/textView2"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />


                </android.support.constraint.ConstraintLayout>


            </LinearLayout>


            <!-- Layout to Hold User Score Contents-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:fontFamily="sans-serif"
                    android:padding="2dp"
                    android:text="@string/user_rating"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/movie_user_vote_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="2dp"
                    android:textStyle="bold"
                    tools:text="7.4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="2dp"
                    android:text="/10"
                    android:textStyle="bold" />

            </LinearLayout>


            <!-- Layout to Hold Popularity Contents-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/rating_of_movie"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/movie_Popular"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </LinearLayout>

            <!-- Layout to Hold Release Date Contents-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:fontFamily="sans-serif"
                    android:padding="2dp"
                    android:text="@string/date_of_release"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:fontFamily="sans-serif"
                    android:padding="2dp"
                    android:textStyle="bold"
                    tools:text="2017-10-25" />
            </LinearLayout>


            <!-- Layout to Hold Synopsis Contents-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:fontFamily="sans-serif"
                    android:padding="2dp"
                    android:text="@string/description_of_movie"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/movie_Description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    tools:text="This is the brief synopsis of Movie" />

                <TextView
                    android:id="@+id/movie_reviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>